--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="main">
     <div class="box-container">
       <div class="box">
-        <img src="/images/icon-sedans.svg" alt="">
+        <img src="images/icon-sedans.svg" alt="">
         <h2>Sedans</h2>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
           or on your next road trip.</p>
@@ -31,19 +31,19 @@
       </div>
 
       <div class="box">
-        <img src="/images/icon-suvs.svg" alt="">
+        <img src="images/icon-suvs.svg" alt="">
         <h2>SUVs</h2>
         <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
           and off-road adventures.</p>
-        <button>Learn More</button>
+        <button style="color: rgb(0, 105, 112);">Learn More</button>
       </div>
 
       <div class="box">
-        <img src="/images/icon-luxury.svg" alt="">
+        <img src="images/icon-luxury.svg" alt="">
         <h2>Luxury</h2>
         <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
           rental and arrive in style.</p>
-        <button>Learn More</button>
+        <button style="color: hsl(179, 100%, 13%)">Learn More</button>
       </div>
     </div>
 
